# noggin

./: .gitignore  Cargo.toml  Makefile  debate-prompt.txt  shell.nix
.finna/: consensus.json  roadmap.arf
.finna/specs/01-cargo-project-setup/: spec.arf
.finna/specs/02-error-types/: spec.arf
.finna/specs/03-arf-data-structures/: spec.arf
.finna/specs/04-manifest-tracking/: spec.arf
.finna/specs/05-init-command/: spec.arf
.finna/specs/06-git-history-traversal/: spec.arf
.finna/specs/07-commit-significance-scoring/: spec.arf
.finna/specs/08-llm-claude-invocation/: spec.arf
.finna/specs/09-llm-codex-invocation/: spec.arf
.finna/specs/10-llm-gemini-invocation/: spec.arf
.finna/specs/11-parallel-model-analysis/: spec.arf
.finna/specs/12-consensus-synthesis/: spec.arf
.finna/specs/13-file-hash-tracking/: spec.arf
.finna/specs/14-commit-tracking/: spec.arf
.finna/specs/15-pattern-invalidation/: spec.arf
.finna/specs/16-learn-command-initial/: spec.arf
.finna/specs/17-learn-command-incremental/: spec.arf
src/: arf.rs  config.rs  error.rs  lib.rs  main.rs  manifest.rs  query.rs
src/commands/: init.rs  learn.rs  mod.rs  serve.rs  status.rs
src/git/: mod.rs  scoring.rs  walker.rs
src/learn/: mod.rs  prompts.rs  scanner.rs  writer.rs
src/llm/: claude.rs  codex.rs  gemini.rs  mod.rs  parallel.rs
src/mcp/: mod.rs  server.rs
src/synthesis/: conflict.rs  merger.rs  mod.rs  vote.rs
tests/: arf_tests.rs  git_scoring.rs  git_walker_test.rs  synthesis_tests.rs
tests/fixtures/: decision.arf  migration.arf  pattern.arf
(+5 files in other folders)
