[package]
name = "llm-noggin"
version = "0.1.0"
edition = "2021"
description = "Multi-model codebase knowledge extraction and querying tool"
license = "MIT"
repository = "https://github.com/ducks/noggin"
keywords = ["codebase", "knowledge", "llm", "git", "analysis"]

[[bin]]
name = "noggin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
git2 = "0.19"
anyhow = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
